force-app/main/default/objects/Contract_Item__c/fields/Contract_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Quote_Line_Group__c</referenceTo>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>