force-app/main/default/objects/Contract_Item__c/fields/Contract_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You can use this field to Group your Contract Line items within a Contract.</inlineHelpText>
    <label>Contract Line Group</label>
    <referenceTo>Contract_Line_Group__c</referenceTo>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>